# BinaryFileModifier

./: CMakeLists.txt  README.md  main.cpp
MainWindow/: mainwindow.cpp  mainwindow.h
Widgets/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
model/ModificationSettings/: ModificationSettings.cpp  ModificationSettings.h
src/FileModifier/: FileModifier.cpp  FileModifier.h
src/Logger/: Logger.cpp  Logger.h  LoggerInterface.h
src/Logger/TextBrowserLogger/: TextBrowserLogger.cpp  TextBrowserLogger.h
src/Logger/TextStreamLogger/: TextStreamLogger.cpp  TextStreamLogger.h
src/Logger/ThreadSafeLogger/: ThreadSafeLogger.cpp  ThreadSafeLogger.h
src/SettingsObserver/: SettingsObserver.cpp  SettingsObserver.h
src/config/AppConfig/: AppConfig.cpp  AppConfig.h
